--- a/views/contact.ejs
+++ b/views/contact.ejs
@@ -1,10 +1,11 @@
 <div>
   <h1>Contact page</h1>
-  <form action="/contact" method="post">
+  <form action="/subscribe" method="post">
     <label for="name">Name</label>
     <input type="text" name="name">
     <label for="email">Email</label>
     <input type="email" name="email">
+    <input type="text" name="zipCode" placeholder="Zip Code" pattern="[0-9]5">
     <input type="submit" value="Submit">
   </form>
 </div>
