--- a/views/contact.ejs
+++ b/views/contact.ejs
@@ -5,7 +5,7 @@
     <input type="text" name="name">
     <label for="email">Email</label>
     <input type="email" name="email">
-    <input type="text" name="zipCode" placeholder="Zip Code" pattern="[0-9]5">
+    <input type="text" name="zipCode" placeholder="Zip Code" pattern="[0-9]{7}">
     <input type="submit" value="Submit">
   </form>
 </div>
