p173 created seed.js

--- a/views/subscribers.ejs
+++ b/views/subscribers.ejs
@@ -1,5 +1,6 @@
 <%# render subscribers data by looping  %>
 <% subscribers.forEach(subscriber => { %> 
   <p> <%= subscriber.name %> </p>
-  <p> <%= subscriber.email %> </p>
+  <p> <%= subscriber.name %> </p>
+  <p> <%= subscriber.zipCode %> </p>
 <% }); %> 
