--- a/views/users/new.ejs
+++ b/views/users/new.ejs
@@ -8,7 +8,7 @@
     <label for="inputPassword">Password</label>
     <input type="password" name="password" id="inputPassword" placeholder="Password" required>
     <label for="inputEmail">Email address</label>
-    <input type="email" name="emil" id="inputEmail" placeholder="Email address" required>
+    <input type="email" name="email" id="inputEmail" placeholder="Email address" required>
     <label for="inputZipCode">Zip Code</label>
     <input type="text" name="zipCode" id="inputZipCode" pattern="*" placeholder="Zip Code" required>
     <button type="submit">Sign in</button>    
