--- a/views/users/index.ejs
+++ b/views/users/index.ejs
@@ -8,9 +8,13 @@
     </tr>
   </thead>
   <tbody>
-    <% users.forEach(user => { %> 
+    <% users.forEach(user => { %>
     <tr>
-      <td><%= user.fullName %> </td>
+      <td>
+        <a href="<%= `/users/${user._id}` %> ">
+          <%= user.fullName %>
+        </a>
+      </td>
       <td><%= user.email %> </td>
       <td><%= user.zipCode %> </td>
     </tr>
