--- a/views/users/show.ejs
+++ b/views/users/show.ejs
@@ -3,19 +3,19 @@
 <table class="table">
   <tr>
     <th>Name</th>
-    <td><% user.fullName %> </td>
+    <td><%= user.fullName %> </td>
   </tr>
   <tr>
     <th>Email</th>
-    <td><% user.email %> </td>
+    <td><%= user.email %> </td>
   </tr>
   <tr>
     <th>Zip Code</th>
-    <td><% user.zipCode %> </td>
+    <td><%= user.zipCode %> </td>
   </tr>
   <tr>
     <th>Password</th>
-    <td><% user.password %> </td>
+    <td><%= user.password %> </td>
   </tr>
 </table>
 
