p230 create 'users/edit.ejs' and add 'Edit' link for '/users/:id/edit'

--- a/views/users/index.ejs
+++ b/views/users/index.ejs
@@ -17,6 +17,11 @@
       </td>
       <td><%= user.email %> </td>
       <td><%= user.zipCode %> </td>
+      <td>
+        <a href="<%= `/users/${user._id}/edit` %> ">
+          Edit
+        </a>
+      </td>
     </tr>
     <% }); %>
   </tbody>
