--- a/views/subscribers/new.ejs
+++ b/views/subscribers/new.ejs
@@ -1,6 +1,6 @@
 <div>
-  <h1>Subscriber now!</h1>
-  <form action="/subscribe" method="post">
+  <h1>Subscribe now!</h1>
+  <form action="/subscribers/create" method="post">
     <label for="name">Name</label>
     <input type="text" name="name">
     <label for="email">Email</label>
