--- a/views/courses/index.ejs
+++ b/views/courses/index.ejs
@@ -6,6 +6,8 @@
       <th>Description</th>
       <!-- <th>Items</th> -->
       <th>Zip Code</th>
+      <th>Edit</th>
+      <th>Delete</th>
     </tr>
   </thead>
   <tbody>
