--- a/views/subscribers/index.ejs
+++ b/views/subscribers/index.ejs
@@ -6,6 +6,8 @@
       <th>Name</th>
       <th>Email</th>
       <th>Zip Code</th>
+      <th>Edit</th>
+      <th>Delete</th>
     </tr>
   </thead>
   <tbody>
