--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -10,6 +10,13 @@
 <body>
   <header>
     <h1>HEADER</h1>
+    test: <%= loggedIn %> 
+    <% if (loggedIn) { %> 
+      Logged in as <a href="<%= `/users/${currentUser._id}` %> ">
+        <%= currentUser.fullName %></a>
+    <% } else { %> 
+      <a href="/users/login">Log In</a>
+    <% } %> 
   </header>
   <div class="flashes">
     <%# show flash messages if any %>
