--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -14,6 +14,7 @@
     <% if (loggedIn) { %> 
       Logged in as <a href="<%= `/users/${currentUser._id}` %> ">
         <%= currentUser.fullName %></a>
+        <a href="/users/logout">Log out</a>
     <% } else { %> 
       <a href="/users/login">Log In</a>
     <% } %> 
